# HOS-Alpha

./: CMakeLists.txt  Makefile  README.md  compile.sh  run.sh
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
OS/: help.txt
OS/help/: hash.txt  hpm.txt  htp.txt
os/: HOS
os/help/: help.txt  netwatch.txt  ping.txt  run.txt
os/help-pages/: hash.txt
os/textures/: style.css
src/: HOS.h  main.c  main.h  main_util.c  root.c  root.h  types.h
src/APIs/HOS/: HOSAPI.c  HOSAPI.h
src/APIs/Process/: proc_api.c  proc_api.h
src/Commands/: cmd_base.h  cmd_basic.c  cmd_hash.c  cmd_help.c  cmd_hpm.c  cmd_htp.c  cmd_netwatch.c  cmd_ping.c  cmd_run.c  cmds.c
src/Crypto/: crypto.c  crypto.h
src/HPM/: example.json  hpm.c  hpm.h  hpm_utils.c  hpm_utils.h  install_database.c  install_database.h
src/Networking/: netroot.c  netroot.h  netutils.c  netutils.h  netwatch.c  netwatch.h  ping.c  ping.h
src/Networking/NetWatch/: netwatch.c  netwatch.h
src/gtk/: gtk_main.h  gtk_utils.c
src/gtk/Apps/: app_base.c  app_base.h
src/gtk/Apps/NetWatch/: gtk_netwatch.c  gtk_netwatch.h  gtk_netwatch_helper.c
src/gtk/Apps/terminal/: gtk_terminal.c  gtk_terminal.h
src/lib/: HOS.h  cmds.c  cmds.h  ll.c  ll.h  macro.c  macro.h  memory.c  memory.h  tree.c  tree.h
src/lib/gtk/: gtk_main.c  gtk_main.h  gtk_utils.c
src/lib/gtk/Apps/: app_base.c  app_base.h
src/lib/gtk/Apps/NetWatch/: gtk_netwatch.c  gtk_netwatch.h  gtk_netwatch_helper.c
src/lib/gtk/Apps/terminal/: gtk_terminal.c  gtk_terminal.h
src/net/: netroot.c  netroot.h  netutils.c  ping.c  ping.h
src/net/HTP/: htp.h  htp_client.c  htp_server.c  htp_utils.c
src/net/NetWatch/: netwatch.c  netwatch.h
